--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8"/>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
@@ -14,11 +14,18 @@
             content="Inclutopia steht für Inklusion in Freizeit, Kultur und gesellschaftlichem Engagement. Durch Advocacyarbeit, Networking und Empowerment geben wir Kindern, Jugendlichen mit Behinderung und Diskriminierungserfahrung und ihren Familien in Köln und NRW eine starke Stimme."
     />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="manifest" href="/manifest.json"/>
     <title>Inklusion für Köln: Inclusion In & Out of the Box</title>
+
+    <style>
+        html {
+            overflow-y: scroll;
+            overflow-x: clip;
+        }
+    </style>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
